v0.2rc3

1. Ported from PETSc 3.1 to PETSc 3.3
1.1 PetscTruth -> PetscBool
1.2 VecLoadIntoVector -> VecLoad
1.3 PetscViewerDestroy -> adapted to new signature
1.4 VecDestroyVecs -> adapted to new signature
1.5 PetscMatDestroy -> adapted to new signature
1.6 PetscOptionsGetTruth -> PetscOptionsGetBool

2. changed signature of Metos3DDebug to: Metos3DDebug(Metos3D *metos3d, PetscInt level, const char *format, ...)
2.1 changed ALL calls to Metos3DDebug

3. Timing built in now

4. Added WARNING to documentation about Metos3DSpinupMonitorModuloStep

5. Added 'Metos3DUtilMatrixLoad'

6. Metos3DUtilVecLoadIntoVector -> Metos3DUtilVectorLoad

7. Built in load balabncing (metos3d_load.c)

8. Fixed output option (Metos3DSpinupMonitorModuloStep)